# Wirewolf

./: .clangd  .dllbuild.txt  .gitignore  .mcp.json  .sonarcloud.properties  CMakeLists.txt  README.md  build.ps1
bench/: .bench_neris.txt  bench_common.hpp  benchmark.cpp  labels.NSIS-s12.csv  labels.Rbot-s11.csv  labels.Sogou-s7.csv  labels.Virut-s5.csv  labels.cicids.csv  labels.cicids_small.csv  labels.example.csv  labels.guloader.csv  labels.heartbleed.csv  labels.home.csv  labels.neris.csv  probe.cpp
cli/: main.cpp
cmake/: FindPcap.cmake
docs/: plan.md  sideproject.txt
flutter_app/: README.md  copy_dlls.ps1  pubspec.yaml
flutter_app/assets/geo/: asn.str  city.str  proxy.str
flutter_app/assets/globe/: index.html  world.js
flutter_app/assets/models/: behavioral.botnet.model  behavioral.normal.model
flutter_app/lib/: main.dart
flutter_app/lib/ffi/: geo_ip.dart  ip2location.dart  wirewolf_bindings.dart  wirewolf_service.dart
flutter_app/lib/panels/: alert_detail_panel.dart  alert_inspector.dart  alerts_table.dart  alerts_timeline_chart.dart  console_panel.dart  filter_funnel_chart.dart  host_telemetry.dart  severity_donut_chart.dart  threat_distribution_chart.dart  top_sources_chart.dart  top_targets_chart.dart
flutter_app/lib/screens/: activity_screen.dart  config_screen.dart  dashboard_screen.dart  log_screen.dart  threat_map_screen.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/util/: incident_report.dart  incident_report_pdf.dart
flutter_app/lib/widgets/: command_palette.dart  pipeline_indicator.dart  severity_badge.dart  severity_stat_card.dart  stat_card.dart  status_bar.dart  top_bar.dart  wirewolf_mark.dart
flutter_app/test/: incident_report_pdf_test.dart
flutter_app/tool/: convert_ip2location.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/flutter/: generated_plugins.cmake
flutter_app/windows/runner/: Runner.rc  main.cpp
gui/: CMakeLists.txt  app.cpp  app.hpp  main_gui.cpp  theme.cpp  theme.hpp
gui/panels/: activity_panel.cpp  activity_panel.hpp  alert_panel.cpp  alert_panel.hpp  config_panel.cpp  config_panel.hpp  log_panel.cpp  log_panel.hpp  panel_format.hpp  stats_panel.cpp  stats_panel.hpp
include/: alert_json.hpp  behavioral_model.hpp  config.hpp  llm_inference.hpp  logger.hpp  npu_filter.hpp  packet_types.hpp  payload_normalizer.hpp  pipeline_controller.hpp  proxy_db.hpp  tcp_reassembly.hpp  thread_safe_queue.hpp  threat_feed.hpp  tls_inspector.hpp  wirewolf_capi.h  wirewolf_types.hpp
models/: behavioral_eval.csv  behavioral_report.json  check_cache.py  check_devices.py  check_files.py  create_npu_cnn_model.py  create_npu_model.py  download_models.py  download_q4.py  list_ov_dlls.py  model.xml  npu_filter.xml  npu_filter_cnn.onnx  npu_filter_cnn.xml  test_cpp_ov.py
models/crossfamily/: behavioral.botnet.model  behavioral.normal.model  behavioral_eval.csv  behavioral_report.json
models/pcap_trained/: behavioral.botnet.model  behavioral.normal.model  behavioral_eval.csv  behavioral_report.json
obsidian-vault/: 00 - Project Map (MOC).md
obsidian-vault/.obsidian/: graph.json
obsidian-vault/api/: C FFI API.md  FFI Configuration.md  FFI Event Polling.md  FFI Lifecycle & Control.md
obsidian-vault/architecture/: Architecture.md  Operating Modes (Live NIDS vs Forensic).md  Tech Stack.md
obsidian-vault/components/: Alert Inspector.md  Alerts Table.md  App Shell.md  Behavioral C2 Detector.md  Behavioral Model Trainer.md  C FFI Library.md  CLI Entry Point.md  Command Palette.md  Connection Anomaly Detector.md  Dashboard Charts.md  Dashboard Screen.md  GeoIP Resolver.md  Host Telemetry.md  IP2Location Loader.md  ImGui Panels.md  LLM Inference Engine.md  Logger.md  OpenVINO Accelerator.md  Packet Capture.md  Payload Normalizer.md  Pipeline Controller.md  Proxy DB Reader.md  Secondary Screens.md  Statistical Pre-Filter.md  TCP Reassembler.md  TLS JA3 Inspector.md  Thread-Safe Queue.md  Threat Feed & Rules.md  Threat Map Screen.md  WinDivert Inline Blocker.md  Wirewolf Bindings.md  Wirewolf Service.md  WirewolfConfig.md
obsidian-vault/concepts/: Backpressure & Queue Drops.md  Entropy Analysis.md  Glossary.md  Hallucination Suppression.md  JA3 Fingerprinting.md  Markov Behavioral Detection.md  Network vs Application Layer.md  Severity & CVSS Scoring.md  Threat Tagging & False-Positive Tuning.md
obsidian-vault/data/: AlertData (Dart).md  ConnectionInfo.md  Data Models.md  FlowData.md  FlowEvent.md  IP2Location Tables.md  LogEntry.md  PipelineStats.md  SeverityInfo & Threat Catalog.md  ThreatAlert.md
obsidian-vault/flows/: Flow - Connection Anomaly Detection.md  Flow - Inline Blocking (IPS).md  Flow - LLM Threat Classification.md  Flow - Live Monitoring (Flutter).md  Flow - Offline PCAP Analysis (CLI).md  Flow - Threat Map Visualization.md
obsidian-vault/meta/: Benchmarking & Datasets.md  Build System.md  CI-CD.md  Configuration.md  Deployment.md  Documentation Status.md  Environment & Models.md  Error Handling.md  External Dependencies.md  Logging.md  Orphan Check.md  Tasks.md  Testing Strategy.md  Tools.md  Unit Tests.md
obsidian-vault/modules/: Capture Layer.md  Detection Engine.md  Flutter Frontend.md  Geo Enrichment.md  Interfaces & FFI.md  Native GUI.md  Threat Intelligence.md
rules/: bad_domains.txt  bad_ips.txt  bad_ja3.txt  signatures.txt
scripts/: build_openvino_vs2022.ps1  deploy.ps1  deploy_engine_dll.ps1  download_models.ps1  make_benign_labels.ps1  run_benchmark.ps1  watch_ip.ps1
src/: alert_json.cpp  behavioral_model.cpp  llm_inference.cpp  npu_filter.cpp  pipeline_controller.cpp  tcp_reassembly.cpp  wirewolf_capi.cpp
tests/: test_config.cpp  test_npu_filter.cpp  test_packet_types.cpp  test_thread_safe_queue.cpp
tool/: bf2labels.mjs  gen_obsidian.mjs  ipscan.cpp
tools/export_states/: export_states.cpp
tools/train_behavioral/: README.md  train.cpp
